--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
-
+.holder{
+	display:grid;
+	grid-template-rows:repeat(2,100px);
+	grid-template-columns:repeat(2,100px);
+}
+.item-1,.item-4{
+	background-color:red;
+}
+.item-2,.item-3{
+	background-color:green;
+}
 /* Your CSS Code here. */
